Add if-else and if block to check whether item is done

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -11,10 +11,16 @@
     <table>
         {% for item in items %}
             <tr>
-                <td>{{ item.name }}</td>
-                <td>{{ item.done }}</td>
+                {% if item.done %}
+                    <td><strike>{{ item.name }}</strike></td>
+                {% else %}
+                    <td>{{ item.done }}</td>
+                {% endif %}
             </tr>
+        {% empty %}
         {% endfor %}
+        
+        <tr><td>You have nothing to do</td></tr>
     </table>
 
 </body>
