--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -16,6 +16,11 @@
                 {% else %}
                     <td>{{ item.name }}</td>
                 {% endif %}
+                <td>
+                    <a href="/edit/{{ item.id }}">
+                        <button>Edit</button>
+                    </a>
+                </td>
             </tr>
         {% empty %}
             <tr><td>You have nothing to do</td></tr>
